--- a/Page Scripts/Html/Chess.html
+++ b/Page Scripts/Html/Chess.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="../../Misc/Style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
     <div id="chessboard"></div>
-    <script src="ChessPage.js"></script>
+    <script type="module" src="../Javascript/ChessPage.js"></script>
 </body>
 </html>
