--- a/Page Scripts/Html/Index.Html
+++ b/Page Scripts/Html/Index.Html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chessing</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="../../Misc/Style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -17,6 +17,6 @@
     </main>
     <footer>
     </footer>
-    <script type="module" src="Chess.js"></script>
+    <script type="module" src="../Javascript/TitlePage.js"></script>
 </body>
 </html>
