--- a/Page Scripts/Html/Lobby.html
+++ b/Page Scripts/Html/Lobby.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess Lobby</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../Misc/Style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -29,6 +29,6 @@
     </main>
     <footer>
     </footer>
-    <script src="Chess.js"></script>
+    <script type="module" src="../Javascript/LobbyPage.js"></script>
 </body>
 </html>
