Refactor Cell, Lobby, and Piece classes to improve game logic and event handling; initialize piece property and enhance capture logic for Pawn pieces

--- a/Page Scripts/Html/Lobby.html
+++ b/Page Scripts/Html/Lobby.html
@@ -23,7 +23,7 @@
             <form id="create-game-form">
                 <label for="game-name">Game Name:</label>
                 <input type="text" id="game-name" name="game-name" required>
-                <button type="submit">Create Game</button>
+                <button type="submit" id="create-game">Create Game</button>
             </form>
         </section>
     </main>
