--- a/public/Page Scripts/Html/Index.Html
+++ b/public/Page Scripts/Html/Index.Html
@@ -17,6 +17,6 @@
     </main>
     <footer>
     </footer>
-    <script type="module" src="../../Page Scripts/Javascript/TitlePage.js"></script>
+    <script type="module" src="/Page Scripts/Javascript/TitlePage.js"></script>
 </body>
 </html>
