--- a/public/Page Scripts/Html/Index.Html
+++ b/public/Page Scripts/Html/Index.Html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chessing</title>
-    <link rel="stylesheet" href="../../Misc/Style.css">
+    <link rel="stylesheet" href="../../Style/Style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -13,7 +13,8 @@
     </header>
     <main>
         <section>
-        </section>
+            <button class="btn" id="start-game">start-game</button>
+            </section>
     </main>
     <footer>
     </footer>
