--- a/public/Page Scripts/Html/Lobby.html
+++ b/public/Page Scripts/Html/Lobby.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobby</title>
-    <link rel="stylesheet" href="../../Misc/Style.css">
+    <link rel="stylesheet" href="../../Style/Style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
