Add new styles for Lobby and Chess pages; create TitleStyle and implement square grid in TitlePage.js

--- a/public/Page Scripts/Html/Index.Html
+++ b/public/Page Scripts/Html/Index.Html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chessing</title>
-    <link rel="stylesheet" href="../../Style/Style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../Style/TitleStyle.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -14,7 +14,11 @@
     <main>
         <section>
             <button class="btn" id="start-game">start-game</button>
-            </section>
+        </section>
+        <section class="square" id="big-square">
+            <!-- Small squares will be populated here -->
+            <!-- Repeat as needed to fill the grid -->
+        </section>
     </main>
     <footer>
     </footer>
