--- a/public/Page Scripts/Html/Lobby.html
+++ b/public/Page Scripts/Html/Lobby.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobby</title>
-    <link rel="stylesheet" href="../../Style/Style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../Style/LobbyStyle.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Corrected path -->
+
+
 </head>
 <body>
     <header>
