--- a/public/Page Scripts/Html/Chess.html
+++ b/public/Page Scripts/Html/Chess.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../Style/ChessStyle.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Corrected path -->
+    <script src="/socket.io/socket.io.js"></script> 
     <body>
         <img scr="/public/Assets/loading.gif" id="loading" alt="loading">
     </body>
